--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "@comunica/actor-init-sparql-rdfjs": "1.4.2",
+    "@comunica/actor-init-sparql-rdfjs": "^1.6.5",
     "@solid/cli": "^0.1.0",
     "@solid/query-ldflex": "^1.1.1",
     "codacy-coverage": "^3.4.0",
