--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "prefix-ns": "^0.1.2",
     "q": "^1.5.1",
     "solid-auth-client": "^2.2.10",
+    "solid-file-client": "^0.4.9",
     "streamify-array": "^1.0.1",
     "uniqid": "^5.0.3",
     "uri-js": "^4.2.2",
