--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
     "solid-file-client": "^0.4.9",
     "streamify-array": "^1.0.1",
     "uniqid": "^5.0.3",
-    "uri-js": "^4.2.2",
-    "winston": "^3.1.0"
+    "uri-js": "^4.2.2"
   }
 }
