--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "n3": "^1.0.2",
     "prefix-ns": "^0.1.2",
     "q": "^1.5.1",
-    "solid-auth-client": "^2.2.14",
+    "solid-auth-client": "2.2.14",
     "solid-file-client": "^0.4.9",
     "streamify-array": "^1.0.1",
     "uniqid": "^5.0.3",
